--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^2.30.0",
@@ -51,6 +52,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "react": "^18.3.1",
