--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "pdf-lib": "^1.17.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
