--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "bcryptjs": "^3.0.2",
+    "eslint-config-next": "^15.3.1",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.17",
