--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test:unit": "jest",
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "test:unit": "jest",
+    "test:integration": "jest __tests__/integration.test.ts",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
@@ -77,18 +78,23 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "bcryptjs": "^3.0.2",
     "eslint-config-next": "^15.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-mocks-http": "^1.17.0",
+    "playwright": "^1.52.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
+    "supertest": "^7.1.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.2",
     "tsx": "^4.19.3",
