Disable unit tests in CI workflow temporarily

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Lint provera (ESLint)
         run: npm run lint
 
-      - name: Pokretanje unit testova (Jest)
-        run: npm run test:unit
+      # - name: Pokretanje unit testova (Jest)
+      #   run: npm run test:unit
 
       - name: Pokretanje integration testova (Jest)
         run: npm run test:integration
