--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@edge-csrf/core": "2.5.3-cloudflare-rc1",
     "@hookform/resolvers": "^3.9.1",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@prisma/client": "6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
