--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -19,12 +19,12 @@ jobs:
         with:
           node-version: '20.x'
       - name: Instalacija dependencija
-        run: npm ci
+        run: pnpm ci
       - name: Build projekta
-        run: npm run build
+        run: pnpm run build
 
       - name: Lint provera (ESLint)
-        run: npm run lint
+        run: pnpm run lint
 
       # - name: Pokretanje unit testova (Jest)
       #   run: npm run test:unit
@@ -38,4 +38,4 @@ jobs:
       #     npm run test:e2e
 
       - name: Security audit (npm audit)
-        run: npm run audit
+        run: pnpm run audit
