Fix dependency installation command from pnpm ci to pnpm install

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Instalacija pnpm
         run: npm install -g pnpm
       - name: Instalacija dependencija
-        run: pnpm ci
+        run: pnpm install
       - name: Build projekta
         run: pnpm run build
 
