--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@edge-csrf/core": "2.5.3-cloudflare-rc1",
     "@hookform/resolvers": "^3.9.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
@@ -59,6 +60,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
