--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@edge-csrf/core": "2.5.3-cloudflare-rc1",
     "@hookform/resolvers": "^3.9.1",
+    "@next/bundle-analyzer": "^15.3.1",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
