--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "audit": "pnpm audit",
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --no-engine && next build",
     "test:unit": "jest",
     "test:integration": "jest __tests__/integration.test.ts",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
     "@edge-csrf/core": "2.5.3-cloudflare-rc1",
