feat: add EXIF orientation correction and remove image deletion functionality

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
+    "exif-js": "^2.3.0",
     "fontkit": "^2.0.4",
     "input-otp": "1.4.1",
     "jszip": "^3.10.1",
