--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
     "fontkit": "^2.0.4",
+    "framer-motion": "^12.11.0",
     "input-otp": "1.4.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
