--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "pdf-lib": "^1.17.1",
@@ -82,6 +83,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
@@ -96,6 +98,7 @@
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "eslint-config-next": "^15.3.1",
     "jest": "^29.7.0",
