--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/js-cookie": "^3.0.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
@@ -57,11 +58,15 @@
     "embla-carousel-react": "8.5.1",
     "fontkit": "^2.0.4",
     "framer-motion": "^12.11.0",
+    "i18next": "^25.2.0",
+    "i18next-browser-languagedetector": "^8.1.0",
     "input-otp": "1.4.1",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
+    "next-intl": "^4.1.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
@@ -72,6 +77,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "latest",
     "react-hook-form": "^7.54.1",
+    "react-i18next": "^15.5.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "^4.4.0",
